welcome.lessons.welcome.bat.bool2.In1To10.scala.error
in1To10:3: error: not found: value a
    if (10<=a && a<=20){return true}
            ^in1To10:3: error: not found: value a
    if (10<=a && a<=20){return true}
                 ^